		- fixes reading of "output_folder" - it was only reading the first 4 characters
		- they cannot be left empty anymore - the defaults in the source had to be removed
	- removed config_entry_type CFG_STR from config.c/.h (it was never working properly)
	- added message about "test_softreset" only working with "use_debug" enabled
	- removed "hack_debug" as debugger can also be in non-debug builds now
	- "use_debug" can now be used with non-debug builds
	- added option "use_dipswitches" to test all non-default dipswitch settings
	- updated URLs in comments from toseciso.org to redump.net
	- added option "use_configurations" to test all non-default configurations settings
	- removed -Wunreachable-code from compilation options since it causes spurious warnings with newer GCC versions
	- removed duplicated freeing of valgrind variables
	- fixed mixture of libc and libxml2 allocation when using "hack_pinmame"
	- fixed mixture of libc and libxml2 allocations in configuration code
	- fixed compilation with new toolchain
	- added option "hashpath" to specify the location of the MESS hash files

	create_report
	- added option "report_type" (0 = result report / 1 = comparison report)
	- added option "compare_folder" (used for comparison report to compare "xml_folder" against)
	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports
	- always print all available data in normal mode
	- stdout was not printed was not added to report if stderr was missing
	- added support for dipswitches
	- fixed some memory leaks
	- added support for configurations
	- added hard-coded reporting of "called within reset scope by" for now
	- fixed formating of output when no stderr exists