@@ -439,6 +439,8 @@
 	- fixed mixture of libc and libxml2 allocations in configuration code
 	- fixed compilation with new toolchain
 	- added option "hashpath" to specify the location of the MESS hash files
+	- added Visual Studio 2010 solution and project files
+	- fixes for compilation with Visual Studio 2010 (still not working completely)
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
